# RLProject

./: Juego.py  pyproject.toml
src/: juego.py
tests/: test_gymnasium.py  test_gymnasium_pygame.py
tictactoe/: Ganar o empatar en tictactoe.txt  classes.py  config.py  constants.py  main.py  screen_manager.py  tablero_gym.py  tictactoe_manager.py
tictactoe/agents/: random_human.py  tablero_gym.py
tictactoe/agents/policies/: monte_carlo_model_v7_1.keras  monte_carlo_model_v8_0.keras  monte_carlo_model_v8_1.keras  monte_carlo_model_v8_2.keras  monte_carlo_v7_1.py  monte_carlo_v8.py  monte_carlo_v8_0.py  monte_carlo_v8_1.py  monte_carlo_v8_2.py  optimal_policy.py  tabular_Q_learning.py
tictactoe/agents_learning/: model_human.py  random.py  random_human.py  random_human_render.py  random_pygame.py  tablero_gym.py
tictactoe/agents_learning/training/: monte_carlo.py  monte_carlo_model.keras  monte_carlo_model_v1.keras  monte_carlo_model_v2.keras  monte_carlo_model_v3.keras  monte_carlo_model_v4.keras  monte_carlo_model_v5.keras  monte_carlo_model_v6.keras  monte_carlo_model_v7.keras  monte_carlo_v1.py  monte_carlo_v2.py  monte_carlo_v3.py  monte_carlo_v4.py  monte_carlo_v5.py  monte_carlo_v6.py  monte_carlo_v7.py  monte_carlo_v7_0.py
tictactoe/basic_game/: config.py  error_classes.py  main.py  tablero.py
