[tool.poetry]
name = "rlproject"
version = "0.1.0"
description = ""
authors = ["Nack34 <gmnack9@gmail.com>"]
readme = "README.md"
packages = [{include = "tictactoe", from = "tictactoe"}]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
gymnasium = {extras = ["atari"], version = "^1.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
